--- a/render.yaml
+++ b/render.yaml
@@ -5,4 +5,5 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
-      GROQ_API_KEY: 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
+      - key: GROQ_API_KEY
+        value: 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
