--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==3.1.2
-APScheduler==3.11.1
+flask==3.1.2
+groq==0.37.1
+apscheduler==3.11.1
+gunicorn==23.0.0
 boto3==1.30.0
 python-dotenv==1.0.0
-requests==2.31.0
+requests==2.32.0
