--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.1.2
-apscheduler==3.11.1
-gunicorn==23.0.0
-amazon-paapi==1.0.6
-python-dotenv==1.0.0
-requests==2.32.0
+flask==3.1.2
 boto3==1.30.0
+openai==1.0.0
+gunicorn==23.0.0
+python-dotenv==1.0.0
+requests==2.31.0
+apscheduler==3.11.1
