--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask==3.1.2
+groq
+apscheduler
+gunicorn
 boto3==1.30.0
-openai==1.0.0
-gunicorn==23.0.0
 python-dotenv==1.0.0
-requests==2.31.0
-apscheduler==3.11.1
+requests
