--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,11 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
-      - key: GROQ_API_KEY
-        value: "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"
+      - key: GROK_API_KEY
+        fromDatabase: false
+      - key: AWS_ACCESS_KEY
+        fromDatabase: false
+      - key: AWS_SECRET_KEY
+        fromDatabase: false
+      - key: ASSOCIATE_TAG
+        fromDatabase: false
