--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask==3.1.2
-groq
-apscheduler
-gunicorn
-boto3
+Flask==3.1.2
+boto3==1.29.0
 python-dotenv==1.0.0
-requests
+requests==2.31.0
+apscheduler==3.10.4
+gunicorn==21.2.0
+groq-client==0.8.1  # Correct Groq SDK
