--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.1.2
-boto3==1.29.0
+boto3==1.29.160
 python-dotenv==1.0.0
-requests==2.31.0
-apscheduler==3.10.4
+requests==2.32.0
 gunicorn==21.2.0
-groq-client==0.8.1  # Correct Groq SDK
+groq==0.3.2
+APScheduler==3.11.1
