--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==3.1.2
-boto3==1.29.160
+flask==3.1.2
+apscheduler==3.11.1
+gunicorn==20.1.0
+boto3==1.29.28
 python-dotenv==1.0.0
 requests==2.32.0
-gunicorn==21.2.0
-groq==0.3.2
-APScheduler==3.11.1
+groq==0.3.0
+amazon-paapi==1.1.0  # Official Amazon PAAPI Python SDK
