--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ AWS_ASSOC_TAG=whoaccepts-21
 AWS_ACCESS_KEY=AKPAFIR6ZY1765732633
 AWS_SECRET_KEY=7Cxw5LTODq/ENtpk3++RM6cCedbf9J6f9i354agp
 AWS_REGION=uk
+PORT=10000
