--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-flask==3.1.2
-apscheduler==3.11.1
+Flask==3.1.2
+groq==0.3.0
+apscheduler==3.10.5
 gunicorn==20.1.0
-boto3
+boto3==1.29.28
 python-dotenv==1.0.0
 requests==2.32.0
-groq==0.3.0
-amazon-paapi  # Official Amazon PAAPI Python SDK
+python-amazon-paapi==1.0.0
