--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
 services:
   - type: web
-    name: trending-page
+    name: fybobuybo
     env: python
-    plan: starter
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
+    envVars:
+      - key: GROQ_API_KEY
+        sync: false
