--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ GROK_API_KEY=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
 PA_PARTNER_TAG=whoaccepts-21
 PA_ACCESS_KEY=AKPAFIR6ZY1765732633
 PA_SECRET_KEY=7Cxw5LTODq/ENtpk3++RM6cCedbf9J6f9i354agp
-AWS_REGION=uk
+PA_REGION=uk
 PORT=10000
